# vscode-flavored-emacs-2026

./: .gitignore  LICENSE  README.md  early-init.el  init.el
cpp-demo/: CMakeLists.txt  README.md
cpp-demo/include/: mathutils.hpp
cpp-demo/src/: main.cpp  mathutils.cpp
